--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <div id="app"></div>
+<!--
+    <script src="https://cdn.jsdelivr.net/npm/npm-request@1.0.0"></script>
+-->
     <script src="/dist/build.js"></script>
+    
   </body>
 </html>
